--- a/bio.html
+++ b/bio.html
@@ -25,74 +25,50 @@
     <body>
 
 
-        <section id="ichi">
+      <section id="ni">
 
-            <div class="navigation-bar">
-                <!-- <button class="btn side-btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions">---</button> -->
-                <h1>BMS ACHIEVE</h1>
-            </div>
-
-        </section>
-
-        <section id="ni">
-
-          <nav class="navbar navbar-expand-sm bg">
-            <div class="container-fluid">
-              <!-- <a class="navbar-brand" href="#">BMS ACHIEVE</a> -->
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+          <div class="navbar-main container-fluid">
+            <a class="navbar-brand" href="#">Toshokan</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse main1 navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="index.html">
-                    <i class="fa-solid fa-house-chimney"></i>
-                    HOME</a>
-                </li></ul>
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
-                    <a class="nav-link" href="maths.html">Mathematics</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="eng.html">English</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="chm.html">Chemistry</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="phy.html">Physics</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="bio.html">Biology</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="gst.html">General Studies</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="comp.html">Computer</a>
-                  </li>
-                  <!-- <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Dropdown
-                    </a>
-                    <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="#">Action</a></li>
-                      <li><a class="dropdown-item" href="#">Another action</a></li>
-                      <li><hr class="dropdown-divider"></li>
-                      <li><a class="dropdown-item" href="#">Something else here</a></li>
-                    </ul>
-                  </li> -->
-                </ul>
-                <!-- <form class="d-flex" role="search">
-                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"/>
-                  <button class="btn btn-outline-success" type="submit">Search</button>
-                </form> -->
-              </div>
+                  <a class="nav-link" href="index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="maths.html">Mathematics</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="eng.html">English</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="chm.html">Chemistry</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="phy.html">Physics</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="bio.html">Biology</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="gst.html">General Studies</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="comp.html">Computer</a>
+                </li>
+              </ul>
+              <!-- <form class="d-flex" role="search">
+                <input class="form-control me-1" type="search" placeholder="Search" aria-label="Search"/>
+                <button class="btn btn-outline-success" type="submit">Search</button>
+              </form> -->
             </div>
-          </nav>
+          </div>
+        </nav>
 
-
-        </section>  
+      </section>  
 
 
         <section id="san">
@@ -109,7 +85,7 @@
           <div class="mother">
             <div class="row parent" >
 
-              <div class="col-lg-2 col-md-3 col-sm-2 pdf">
+              <div class="col-lg-4 col-md-3 col-sm-4 pdf">
                 <div class="card">
                   <div class="card-body">
                     <h4 class="card-title">AEB & PBB</h4>
@@ -117,7 +93,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-lg-2 col-md-3 col-sm-2 pdf">
+              <div class="col-lg-4 col-md-3 col-sm-4 pdf">
                 <div class="card">
                   <div class="card-body">
                     <h4 class="card-title">AEB 111</h4>
@@ -125,7 +101,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-lg-2 col-md-3 col-sm-2 pdf">
+              <div class="col-lg-4 col-md-3 col-sm-4 pdf">
                 <div class="card">
                   <div class="card-body">
                     <h4 class="card-title">bio pq</h4>
@@ -133,7 +109,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-lg-2 col-md-3 col-sm-2 pdf">
+              <div class="col-lg-4 col-md-3 col-sm-4 pdf">
                 <div class="card">
                   <div class="card-body">
                     <h4 class="card-title">AEB 111</h4>
@@ -141,7 +117,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-lg-2 col-md-3 col-sm-2 pdf">
+              <div class="col-lg-4 col-md-3 col-sm-4 pdf">
                 <div class="card">
                   <div class="card-body">
                     <h4 class="card-title">AEB 122</h4>
@@ -149,7 +125,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-lg-2 col-md-3 col-sm-2 pdf">
+              <div class="col-lg-4 col-md-3 col-sm-4 pdf">
                 <div class="card">
                   <div class="card-body">
                     <h4 class="card-title">AEB power bank</h4>
@@ -157,7 +133,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-lg-2 col-md-3 col-sm-2 pdf">
+              <div class="col-lg-4 col-md-3 col-sm-4 pdf">
                 <div class="card">
                   <div class="card-body">
                     <h4 class="card-title">AEB122</h4>
@@ -165,7 +141,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-lg-2 col-md-3 col-sm-2 pdf">
+              <div class="col-lg-4 col-md-3 col-sm-4 pdf">
                 <div class="card">
                   <div class="card-body">
                     <h4 class="card-title">AEB122</h4>
@@ -173,7 +149,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-lg-2 col-md-3 col-sm-2 pdf">
+              <div class="col-lg-4 col-md-3 col-sm-4 pdf">
                 <div class="card">
                   <div class="card-body">
                     <h4 class="card-title">BIO 101 CHROMOSOMES GENES AND REPRODUCTION</h4>
@@ -181,7 +157,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-lg-2 col-md-3 col-sm-2 pdf">
+              <div class="col-lg-4 col-md-3 col-sm-4 pdf">
                 <div class="card">
                   <div class="card-body">
                     <h4 class="card-title">BIO101 20232024 PAST QUESTIONS</h4>
@@ -189,7 +165,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-lg-2 col-md-3 col-sm-2 pdf">
+              <div class="col-lg-4 col-md-3 col-sm-4 pdf">
                 <div class="card">
                   <div class="card-body">
                     <h4 class="card-title">Cells and Microscopy (1)</h4>
@@ -197,7 +173,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-lg-2 col-md-3 col-sm-2 pdf">
+              <div class="col-lg-4 col-md-3 col-sm-4 pdf">
                 <div class="card">
                   <div class="card-body">
                     <h4 class="card-title">Distinction in PBB111</h4>
@@ -205,7 +181,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-lg-2 col-md-3 col-sm-2 pdf">
+              <div class="col-lg-4 col-md-3 col-sm-4 pdf">
                 <div class="card">
                   <div class="card-body">
                     <h4 class="card-title">Answers to biology</h4>
@@ -213,7 +189,7 @@
                   </div>
                 </div>
               </div>
-              <!-- <div class="col-lg-2 col-md-3 col-sm-2 pdf">
+              <!-- <div class="col-lg-4 col-md-3 col-sm-4 pdf">
                 <div class="card">
                   <div class="card-body">
                     <h4 class="card-title"></h4>
@@ -242,7 +218,7 @@
           <div class="mother">
             <div class="row parent" >
 
-              <div class="col-lg-2 col-md-3 col-sm-2 pdf">
+              <div class="col-lg-4 col-md-3 col-sm-4 pdf">
                 <div class="card">
                   <div class="card-body">
                     <h4 class="card-title">BIO102 - RESPIRATION IN PLANTS</h4>
@@ -250,7 +226,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-lg-2 col-md-3 col-sm-2 pdf">
+              <div class="col-lg-4 col-md-3 col-sm-4 pdf">
                 <div class="card">
                   <div class="card-body">
                     <h4 class="card-title">BIO102- General Biology II Complete Text-1</h4>
@@ -258,7 +234,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-lg-2 col-md-3 col-sm-2 pdf">
+              <div class="col-lg-4 col-md-3 col-sm-4 pdf">
                 <div class="card">
                   <div class="card-body">
                     <h4 class="card-title">BIO102- REPRODUCTION IN PLANTS</h4>
@@ -266,7 +242,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-lg-2 col-md-3 col-sm-2 pdf">
+              <div class="col-lg-4 col-md-3 col-sm-4 pdf">
                 <div class="card">
                   <div class="card-body">
                     <h4 class="card-title">BOT 102 (1)</h4>
@@ -274,7 +250,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-lg-2 col-md-3 col-sm-2 pdf">
+              <div class="col-lg-4 col-md-3 col-sm-4 pdf">
                 <div class="card">
                   <div class="card-body">
                     <h4 class="card-title">BOT 102</h4>
@@ -282,7 +258,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-lg-2 col-md-3 col-sm-2 pdf">
+              <div class="col-lg-4 col-md-3 col-sm-4 pdf">
                 <div class="card">
                   <div class="card-body">
                     <h4 class="card-title">BOT102- PLANT GROWTH AND DEVELOPMENT</h4>
@@ -290,7 +266,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-lg-2 col-md-3 col-sm-2 pdf">
+              <div class="col-lg-4 col-md-3 col-sm-4 pdf">
                 <div class="card">
                   <div class="card-body">
                     <h4 class="card-title">BOT102- PLANT LIFE CYCLES</h4>
@@ -298,7 +274,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-lg-2 col-md-3 col-sm-2 pdf">
+              <div class="col-lg-4 col-md-3 col-sm-4 pdf">
                 <div class="card">
                   <div class="card-body">
                     <h4 class="card-title">Dr Flash s Answers to biology</h4>
@@ -306,7 +282,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-lg-2 col-md-3 col-sm-2 pdf">
+              <div class="col-lg-4 col-md-3 col-sm-4 pdf">
                 <div class="card">
                   <div class="card-body">
                     <h4 class="card-title">Pbb module.pdf_1</h4>
@@ -314,15 +290,15 @@
                   </div>
                 </div>
               </div>
-              <div class="col-lg-2 col-md-3 col-sm-2 pdf">
+              <div class="col-lg-4 col-md-3 col-sm-4 pdf">
                 <div class="card">
                   <div class="card-body">
-                    <h4 class="card-title">PBB PRACTICAL DIAGRAMS 2</h4>
+                    <h4 class="card-title">PBB PRACTICAL DIAGRAMS 4</h4>
                     <a href="https://drive.google.com/file/d/1LG2lUlTeXOTa6XBURDt03EHCL1_R-bAw/view?usp=drive_link" class="btn check-btn btn-primary">Download</a>
                   </div>
                 </div>
               </div>
-              <div class="col-lg-2 col-md-3 col-sm-2 pdf">
+              <div class="col-lg-4 col-md-3 col-sm-4 pdf">
                 <div class="card">
                   <div class="card-body">
                     <h4 class="card-title">PBB122 cambridge</h4>
@@ -330,7 +306,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-lg-2 col-md-3 col-sm-2 pdf">
+              <div class="col-lg-4 col-md-3 col-sm-4 pdf">
                 <div class="card">
                   <div class="card-body">
                     <h4 class="card-title">PBB122 PAST QUESTIONS ARRANGEMENT</h4>
@@ -354,23 +330,23 @@
             <div class="container"> 
               <footer class="py-3 my-4"> 
                 <ul class="nav justify-content-center border-bottom pb-3 mb-3"> 
-                  <li class="nav-item"><a href="index.html" class="nav-link px-2 text-body-secondary">
+                  <li class="nav-item"><a href="index.html" class="nav-link px-4 text-body-secondary">
                     <i class="fa-solid fa-house-chimney"></i>
                     Home</a></li> 
-                  <li class="nav-item"><a href="maths.html" class="nav-link px-2 text-body-secondary">Mathematics</a></li> 
-                  <li class="nav-item"><a href="eng.html" class="nav-link px-2 text-body-secondary">English</a></li> 
-                  <li class="nav-item"><a href="chm.html" class="nav-link px-2 text-body-secondary">Chemistry</a></li> 
-                  <li class="nav-item"><a href="phy.html" class="nav-link px-2 text-body-secondary">Physics</a></li> 
-                  <li class="nav-item"><a href="bio.html" class="nav-link px-2 text-body-secondary">Biology</a></li> 
-                  <li class="nav-item"><a href="gst.html" class="nav-link px-2 text-body-secondary">General Studies</a></li> 
-                  <li class="nav-item"><a href="comp.html" class="nav-link px-2 text-body-secondary">Computer</a></li> 
+                  <li class="nav-item"><a href="maths.html" class="nav-link px-4 text-body-secondary">Mathematics</a></li> 
+                  <li class="nav-item"><a href="eng.html" class="nav-link px-4 text-body-secondary">English</a></li> 
+                  <li class="nav-item"><a href="chm.html" class="nav-link px-4 text-body-secondary">Chemistry</a></li> 
+                  <li class="nav-item"><a href="phy.html" class="nav-link px-4 text-body-secondary">Physics</a></li> 
+                  <li class="nav-item"><a href="bio.html" class="nav-link px-4 text-body-secondary">Biology</a></li> 
+                  <li class="nav-item"><a href="gst.html" class="nav-link px-4 text-body-secondary">General Studies</a></li> 
+                  <li class="nav-item"><a href="comp.html" class="nav-link px-4 text-body-secondary">Computer</a></li> 
                 </ul> 
                 <div class="social">
-                  <a class="link-secondary link-offset-2 link-underline-opacity-25" href="https://www.facebook.com/share/1HwJsbMYJz/"><i class="fa-brands fa-lg fa-facebook"></i></a>
-                  <a class="link-secondary link-offset-2 link-underline-opacity-25" href="https://wa.me/2348112738759"><i class="fa-brands fa-lg fa-whatsapp"></i></a>
-                  <a class="link-secondary link-offset-2 link-underline-opacity-25" href="https://www.instagram.com/gift_oghale4?igsh=c3huMDhob3l4MmJr"><i class="fa-brands fa-lg fa-instagram"></i></a>
-                  <a class="link-secondary link-offset-2 link-underline-opacity-25" href="https://www.linkedin.com/in/gift-oghale-867175371?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="fa-brands fa-lg fa-linkedin-in"></i></a>
-                  <a class="link-secondary link-offset-2 link-underline-opacity-25" href="https://github.com/oghalegifted"><i class="fa-brands fa-lg fa-github"></i></a>
+                  <a class="link-secondary link-offset-4 link-underline-opacity-25" href="https://www.facebook.com/share/1HwJsbMYJz/"><i class="fa-brands fa-lg fa-facebook"></i></a>
+                  <a class="link-secondary link-offset-4 link-underline-opacity-25" href="https://wa.me/2348112738759"><i class="fa-brands fa-lg fa-whatsapp"></i></a>
+                  <a class="link-secondary link-offset-4 link-underline-opacity-25" href="https://www.instagram.com/gift_oghale4?igsh=c3huMDhob3l4MmJr"><i class="fa-brands fa-lg fa-instagram"></i></a>
+                  <a class="link-secondary link-offset-4 link-underline-opacity-25" href="https://www.linkedin.com/in/gift-oghale-867175371?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="fa-brands fa-lg fa-linkedin-in"></i></a>
+                  <a class="link-secondary link-offset-4 link-underline-opacity-25" href="https://github.com/oghalegifted"><i class="fa-brands fa-lg fa-github"></i></a>
                 </div>
                 <p class="text-center text-body-secondary">© 2025 By Gifted</p> 
               </footer> 
