--- a/BMS/bio.html
+++ b/BMS/bio.html
@@ -8,7 +8,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
          
         <!-- my stylessheet -->
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="/styles.css">
 
         <!-- google fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -29,7 +29,7 @@
 
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
           <div class="navbar-main container-fluid">
-            <a class="navbar-brand" href="index.html">Aura</a>
+            <a class="navbar-brand" href="/index.html">Aura</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -78,7 +78,7 @@
           <div class="mother">
             <div class="row parent" >
 
-              <div class="col-lg-4 col-md-12 col-sm-12 pdf">
+              <div class="col-lg-4 col-md-6 col-sm-6 pdf">
                 <div class="card">
                   <div class="card-body">
                     <h4 class="card-title">AEB & PBB</h4>
@@ -86,7 +86,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-lg-4 col-md-12 col-sm-12 pdf">
+              <div class="col-lg-4 col-md-6 col-sm-6 pdf">
                 <div class="card">
                   <div class="card-body">
                     <h4 class="card-title">AEB 111</h4>
@@ -94,7 +94,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-lg-4 col-md-12 col-sm-12 pdf">
+              <div class="col-lg-4 col-md-6 col-sm-6 pdf">
                 <div class="card">
                   <div class="card-body">
                     <h4 class="card-title">bio pq</h4>
@@ -102,7 +102,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-lg-4 col-md-12 col-sm-12 pdf">
+              <div class="col-lg-4 col-md-6 col-sm-6 pdf">
                 <div class="card">
                   <div class="card-body">
                     <h4 class="card-title">AEB 111</h4>
@@ -110,7 +110,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-lg-4 col-md-12 col-sm-12 pdf">
+              <div class="col-lg-4 col-md-6 col-sm-6 pdf">
                 <div class="card">
                   <div class="card-body">
                     <h4 class="card-title">AEB 122</h4>
@@ -118,7 +118,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-lg-4 col-md-12 col-sm-12 pdf">
+              <div class="col-lg-4 col-md-6 col-sm-6 pdf">
                 <div class="card">
                   <div class="card-body">
                     <h4 class="card-title">AEB power bank</h4>
@@ -126,7 +126,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-lg-4 col-md-12 col-sm-12 pdf">
+              <div class="col-lg-4 col-md-6 col-sm-6 pdf">
                 <div class="card">
                   <div class="card-body">
                     <h4 class="card-title">AEB122</h4>
@@ -134,7 +134,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-lg-4 col-md-12 col-sm-12 pdf">
+              <div class="col-lg-4 col-md-6 col-sm-6 pdf">
                 <div class="card">
                   <div class="card-body">
                     <h4 class="card-title">AEB122</h4>
@@ -142,7 +142,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-lg-4 col-md-12 col-sm-12 pdf">
+              <div class="col-lg-4 col-md-6 col-sm-6 pdf">
                 <div class="card">
                   <div class="card-body">
                     <h4 class="card-title">BIO 101 CHROMOSOMES GENES AND REPRODUCTION</h4>
@@ -150,7 +150,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-lg-4 col-md-12 col-sm-12 pdf">
+              <div class="col-lg-4 col-md-6 col-sm-6 pdf">
                 <div class="card">
                   <div class="card-body">
                     <h4 class="card-title">BIO101 20232024 PAST QUESTIONS</h4>
@@ -158,7 +158,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-lg-4 col-md-12 col-sm-12 pdf">
+              <div class="col-lg-4 col-md-6 col-sm-6 pdf">
                 <div class="card">
                   <div class="card-body">
                     <h4 class="card-title">Cells and Microscopy (1)</h4>
@@ -166,7 +166,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-lg-4 col-md-12 col-sm-12 pdf">
+              <div class="col-lg-4 col-md-6 col-sm-6 pdf">
                 <div class="card">
                   <div class="card-body">
                     <h4 class="card-title">Distinction in PBB111</h4>
@@ -174,7 +174,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-lg-4 col-md-12 col-sm-12 pdf">
+              <div class="col-lg-4 col-md-6 col-sm-6 pdf">
                 <div class="card">
                   <div class="card-body">
                     <h4 class="card-title">Answers to biology</h4>
@@ -202,7 +202,7 @@
           <div class="mother">
             <div class="row parent" >
 
-              <div class="col-lg-4 col-md-12 col-sm-12 pdf">
+              <div class="col-lg-4 col-md-6 col-sm-6 pdf">
                 <div class="card">
                   <div class="card-body">
                     <h4 class="card-title">BIO102 - RESPIRATION IN PLANTS</h4>
@@ -210,7 +210,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-lg-4 col-md-12 col-sm-12 pdf">
+              <div class="col-lg-4 col-md-6 col-sm-6 pdf">
                 <div class="card">
                   <div class="card-body">
                     <h4 class="card-title">BIO102- General Biology II Complete Text-1</h4>
@@ -218,7 +218,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-lg-4 col-md-12 col-sm-12 pdf">
+              <div class="col-lg-4 col-md-6 col-sm-6 pdf">
                 <div class="card">
                   <div class="card-body">
                     <h4 class="card-title">BIO102- REPRODUCTION IN PLANTS</h4>
@@ -226,7 +226,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-lg-4 col-md-12 col-sm-12 pdf">
+              <div class="col-lg-4 col-md-6 col-sm-6 pdf">
                 <div class="card">
                   <div class="card-body">
                     <h4 class="card-title">BOT 102 (1)</h4>
@@ -234,7 +234,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-lg-4 col-md-12 col-sm-12 pdf">
+              <div class="col-lg-4 col-md-6 col-sm-6 pdf">
                 <div class="card">
                   <div class="card-body">
                     <h4 class="card-title">BOT 102</h4>
@@ -242,7 +242,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-lg-4 col-md-12 col-sm-12 pdf">
+              <div class="col-lg-4 col-md-6 col-sm-6 pdf">
                 <div class="card">
                   <div class="card-body">
                     <h4 class="card-title">BOT102- PLANT GROWTH AND DEVELOPMENT</h4>
@@ -250,7 +250,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-lg-4 col-md-12 col-sm-12 pdf">
+              <div class="col-lg-4 col-md-6 col-sm-6 pdf">
                 <div class="card">
                   <div class="card-body">
                     <h4 class="card-title">BOT102- PLANT LIFE CYCLES</h4>
@@ -258,7 +258,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-lg-4 col-md-12 col-sm-12 pdf">
+              <div class="col-lg-4 col-md-6 col-sm-6 pdf">
                 <div class="card">
                   <div class="card-body">
                     <h4 class="card-title">Dr Flash s Answers to biology</h4>
@@ -266,7 +266,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-lg-4 col-md-12 col-sm-12 pdf">
+              <div class="col-lg-4 col-md-6 col-sm-6 pdf">
                 <div class="card">
                   <div class="card-body">
                     <h4 class="card-title">Pbb module.pdf_1</h4>
@@ -274,7 +274,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-lg-4 col-md-12 col-sm-12 pdf">
+              <div class="col-lg-4 col-md-6 col-sm-6 pdf">
                 <div class="card">
                   <div class="card-body">
                     <h4 class="card-title">PBB PRACTICAL DIAGRAMS 4</h4>
@@ -282,7 +282,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-lg-4 col-md-12 col-sm-12 pdf">
+              <div class="col-lg-4 col-md-6 col-sm-6 pdf">
                 <div class="card">
                   <div class="card-body">
                     <h4 class="card-title">PBB122 cambridge</h4>
@@ -290,7 +290,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-lg-4 col-md-12 col-sm-12 pdf">
+              <div class="col-lg-4 col-md-6 col-sm-6 pdf">
                 <div class="card">
                   <div class="card-body">
                     <h4 class="card-title">PBB122 PAST QUESTIONS ARRANGEMENT</h4>
